dummy secrets updated

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -3,14 +3,14 @@ home_lon: 0
 home_elevation: 0
 
 base_url: localhost:8123
-ssl_certificate: null
-ssl_key: null
+ssl_certificate: "null"
+ssl_key: "null"
 
-http_password: null
+http_password: "null"
 
-duckdns_accesstoken: null
+duckdns_accesstoken: "null"
 
-zwave_network_key: null
+zwave_network_key: "null"
 
-postnl_username: null
-postnl_password: null
+postnl_username: "null"
+postnl_password: "null"
