--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "3.5"
 before_install:
   - mv travis_secrets.yaml secrets.yaml
+  - touch ssl_key.pem ssl_cert.pem
 install:
   - pip3 install homeassistant
 script:
