--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -3,8 +3,8 @@ home_lon: 0
 home_elevation: 0
 
 base_url: localhost:8123
-ssl_certificate: "null"
-ssl_key: "null"
+ssl_certificate: 'ssl_cert.pem'
+ssl_key: 'ssl_key.pem'
 
 http_password: "null"
 
