--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
+.DS_Store
+.DS_Store?
+._*
+*.xml
 *.log
 *.db
+*.db-journal
+*.conf
 *.sqlite
 *.swp
+.smb*
+
+.HA_VERSION
+/deps
 OZW_Log.txt
 secrets.yaml
 known_devices.yaml
+ip_bans.yaml
+.uuid
