--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -6,6 +6,8 @@ base_url: localhost:8123
 ssl_certificate: 'ssl_cert.pem'
 ssl_key: 'ssl_key.pem'
 
+z_wave_graph_url: http://localhost/dummy.html
+
 http_password: "null"
 
 duckdns_accesstoken: "null"
