--- a/config/sensor/postnl.yaml
+++ b/config/sensor/postnl.yaml
@@ -1,3 +1,3 @@
-- platform: postnl
-  username: !secret postnl_username
-  password: !secret postnl_password
+#- platform: postnl
+#  username: !secret postnl_username
+#  password: !secret postnl_password
