--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -5,6 +5,8 @@ home_elevation: 0
 base_url: localhost:8123
 ssl_certificate: 'ssl_cert.pem'
 ssl_key: 'ssl_key.pem'
+trusted_networks:
+  - 192.168.1.0/24
 
 z_wave_graph_url: http://localhost/dummy.html
 
